--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
         <ul class="navigation-list list">
           <li class="navigation-item"><a class="link nav-link" href="./index.html">Студия</a></li>
           <li class="navigation-item">
-            <a class="current nav-link link" href="./portfolio.html">Портфолио</a>
+            <a class="current psevdo nav-link link" href="./portfolio.html">Портфолио</a>
           </li>
           <li class="navigation-item"><a class="nav-link link" href="">Контакты</a></li>
         </ul>
@@ -61,8 +61,13 @@
         </ul>
         <ul class="services list">
           <li class="services-item">
-            <a class="link" href=""><img src="./images/img-portfolio/technocryac.jpg" alt="Ноутбук" width="370"
-                height="294" />
+            <a class="link" href="">
+              <div class="portfolio-overlay">
+                <img src="./images/img-portfolio/technocryac.jpg" alt="Ноутбук" width="370" height="294" />
+                <p class="portfolio-desc " lang="ru">Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице.</p>
+              </div>
               <div class="portfolio-card">
                 <h2 class="services-name">Технокряк</h2>
                 <p class="services-text">Веб-сайт</p>
@@ -70,8 +75,13 @@
             </a>
           </li>
           <li class="services-item">
-            <a class="link" href=""><img src="./images/img-portfolio/poster.jpg" alt="Баскетболисты" width="370"
-                height="294" />
+            <a class="link" href="">
+              <div class="portfolio-overlay"><img src="./images/img-portfolio/poster.jpg" alt="Баскетболисты"
+                  width="370" height="294" />
+                <p class="portfolio-desc " lang="ru">Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице.</p>
+              </div>
               <div class="portfolio-card">
                 <h2 class="services-name">Постер New Orlean vs Golden star</h2>
                 <p class="services-text">Дизайн</p>
@@ -79,8 +89,13 @@
             </a>
           </li>
           <li class="services-item">
-            <a class="link" href=""><img src="./images/img-portfolio/restaurant.jpg" alt="Борд ресторана" width="370"
-                height="294" />
+            <a class="link" href="">
+              <div class="portfolio-overlay"><img src="./images/img-portfolio/restaurant.jpg" alt="Борд ресторана"
+                  width="370" height="294" />
+                <p class="portfolio-desc " lang="ru">Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице.</p>
+              </div>
               <div class="portfolio-card">
                 <h2 class="services-name">Ресторан Seafood</h2>
                 <p class="services-text">Приложение</p>
@@ -88,8 +103,13 @@
             </a>
           </li>
           <li class="services-item">
-            <a class="link" href=""><img src="./images/img-portfolio/project.jpg" alt="Наушники" width="370"
-                height="294" />
+            <a class="link" href="">
+              <div class="portfolio-overlay"><img src="./images/img-portfolio/project.jpg" alt="Наушники" width="370"
+                  height="294" />
+                <p class="portfolio-desc " lang="ru">Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице.</p>
+              </div>
               <div class="portfolio-card">
                 <h2 class="services-name">Проект Prime</h2>
                 <p class="services-text">Маркетинг</p>
@@ -97,8 +117,13 @@
             </a>
           </li>
           <li class="services-item">
-            <a class="link" href=""><img src="./images/img-portfolio/boxes.jpg" alt="Две коробки" width="370"
-                height="294" />
+            <a class="link" href="">
+              <div class="portfolio-overlay"><img src="./images/img-portfolio/boxes.jpg" alt="Две коробки" width="370"
+                  height="294" />
+                <p class="portfolio-desc " lang="ru">Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице.</p>
+              </div>
               <div class="portfolio-card">
                 <h2 class="services-name">Проект Boxes</h2>
                 <p class="services-text">Приложение</p>
@@ -106,8 +131,13 @@
             </a>
           </li>
           <li class="services-item">
-            <a class="link" href=""><img src="./images/img-portfolio/edition.jpg" alt="Монитор" width="370"
-                height="294" />
+            <a class="link" href="">
+              <div class="portfolio-overlay"><img src="./images/img-portfolio/edition.jpg" alt="Монитор" width="370"
+                  height="294" />
+                <p class="portfolio-desc " lang="ru">Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице.</p>
+              </div>
               <div class="portfolio-card">
                 <h2 class="services-name">Inspiration has no Borders</h2>
                 <p class="services-text">Веб-сайт</p>
@@ -115,8 +145,13 @@
             </a>
           </li>
           <li class="services-item">
-            <a class="link" href=""><img src="./images/img-portfolio/limited.jpg" alt="Открытая книга" width="370"
-                height="294" />
+            <a class="link" href="">
+              <div class="portfolio-overlay"><img src="./images/img-portfolio/limited.jpg" alt="Открытая книга"
+                  width="370" height="294" />
+                <p class="portfolio-desc " lang="ru">Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице.</p>
+              </div>
               <div class="portfolio-card">
                 <h2 class="services-name">Издание Limited Edition</h2>
                 <p class="services-text">Дизайн</p>
@@ -124,8 +159,13 @@
             </a>
           </li>
           <li class="services-item">
-            <a class="link" href=""><img src="./images/img-portfolio/lab.jpg" alt="Рекламный брелок" width="370"
-                height="294" />
+            <a class="link" href="">
+              <div class="portfolio-overlay"><img src="./images/img-portfolio/lab.jpg" alt="Рекламный брелок"
+                  width="370" height="294" />
+                <p class="portfolio-desc " lang="ru">Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице.</p>
+              </div>
               <div class="portfolio-card">
                 <h2 class="services-name">Проект LAB</h2>
                 <p class="services-text">Маркетинг</p>
@@ -133,8 +173,13 @@
             </a>
           </li>
           <li class="services-item">
-            <a class="link" href=""><img src="./images/img-portfolio/bisness.jpg" alt="Пальцы на клавиатуре ноутбука"
-                width="370" height="294" />
+            <a class="link" href="">
+              <div class="portfolio-overlay"><img src="./images/img-portfolio/bisness.jpg"
+                  alt="Пальцы на клавиатуре ноутбука" width="370" height="294" />
+                <p class="portfolio-desc " lang="ru">Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить
+                  исчерпывающие сведения о компании или частном лице.</p>
+              </div>
               <div class="portfolio-card">
                 <h2 class="services-name">Growing Business</h2>
                 <p class="services-text">Приложение</p>
