--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <button class="hero-btn" type="button" data-modal-open>Заказать услугу</button>
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
-            <button class="modal-btn" data-modal-close>
+            <button class="modal-close-btn" type="button" data-modal-close>
               <svg class="close" width="18" height="18">
-                <use href=""></use>
+                <use href="./images/icons/icons.svg#icon-close"></use>
               </svg>
             </button>
           </div>
